# pqc_agriculture

./: .gitignore  README.md
Sensors/dht22/: CMakeLists.txt
Sensors/dht22/components/fips202/: CMakeLists.txt
Sensors/dht22/components/indcpa/: indcpa.c  indcpa.h
Sensors/dht22/components/kem/: CMakeLists.txt
Sensors/dht22/components/kex/: CMakeLists.txt
Sensors/dht22/components/ntt/: CMakeLists.txt
Sensors/dht22/components/poly/: CMakeLists.txt
Sensors/dht22/components/randombytes/: CMakeLists.txt  randombytes.h
Sensors/dht22/components/reduce/: CMakeLists.txt
Sensors/dht22/components/symmetric/: CMakeLists.txt
Sensors/dht22/main/: CMakeLists.txt  crypto_layer.c  crypto_layer.h  dht22.c  dht22.h  main.c
Sensors/soil_moisture/components/aes256ctr/: CMakeLists.txt
Sensors/soil_moisture/components/cbd/: CMakeLists.txt
Sensors/soil_moisture/components/common/: params.h  taskpriorities.h
Sensors/soil_moisture/components/indcpa/: CMakeLists.txt
Sensors/soil_moisture/components/kybesp32/: CMakeLists.txt
Sensors/soil_moisture/components/polyvec/: CMakeLists.txt
Sensors/soil_moisture/components/sha2/: CMakeLists.txt
Sensors/soil_moisture/components/verify/: CMakeLists.txt
Sensors/soil_moisture/main/: CMakeLists.txt  main.c  soil_moisture.c  soil_moisture.h
cloud/: decrypt_db.py  gen_db_key.py  gen_keys.py  hkdf_util.py  main.py  pqc.py  requirements.txt  server.py  symmetric.py
edge/: client.py  dsa_util.py  gen_dsa_keys.py  gen_t1_keys.py  hkdf_util.py  net_util.py  pqc.py  pqc_kem_512.py  requirements.txt  symmetric.py  test_real_kem.py
